kubernetes/kustomize/oauth-proxy/overlays/preprod/backstage/deployment.patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docsportal-swiss-internal-oauth-proxy
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: backstage-oauth-proxy
  template:
    metadata:
      labels:
        app.kubernetes.io/component: backstage-oauth-proxy
    spec:
      serviceAccount: backstage
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage-oauth-proxy
  labels:
    app.kubernetes.io/component: backstage-oauth-proxy
