kubernetes/kustomize/oauth-proxy/overlays/preprod/backstage/service.patch.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backstage-oauth-proxy
  labels:
    app.kubernetes.io/component: backstage-oauth-proxy
spec:
  selector:
    app.kubernetes.io/component: backstage-oauth-proxy
