kubernetes/kustomize/oauth-proxy/overlays/preprod/backstage/networkpolicy.patch.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backstage-oauth-proxy-network-policy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: backstage-oauth-proxy
